# wden

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/wden-rust-env-setup/: action.yml
.github/workflows/: main.yml  pr.yml  rust.yml
crates/cursive_file_browser/: Cargo.toml
crates/cursive_file_browser/examples/: save_file.rs
crates/cursive_file_browser/src/: lib.rs
crates/cursive_secret_edit_view/: Cargo.toml
crates/cursive_secret_edit_view/src/: slice_vec_ext.rs
crates/secure_buffer/: Cargo.toml
crates/secure_buffer/src/: lib.rs
crates/simple_pam_auth/: Cargo.toml
crates/simple_pam_auth/examples/: console_auth.rs
crates/simple_pam_auth/src/: lib.rs
cursive_secret_edit_view/: Cargo.toml
cursive_secret_edit_view/examples/: echo.rs
cursive_secret_edit_view/src/: array_string_ext.rs  lib.rs  zeroized_array_string.rs
doc/: biometric-unlock.md
secure_buffer/: Cargo.toml
secure_buffer/src/: lib.rs
simple_pam_auth/: Cargo.toml
simple_pam_auth/src/: lib.rs
src/: lib.rs  main.rs
src/bitwarden/: api.rs  cipher.rs  mod.rs  model.rs
src/profile/: global_settings.rs  mod.rs
src/ui/: autolock.rs  clipboard.rs  collections.rs  data.rs  item_details.rs  launch.rs  lock.rs  login.rs  mod.rs  search.rs  sync.rs  two_factor.rs  vault_table.rs
src/ui/clipboard/: linux_clipboard.rs  mod.rs  windows_clipboard.rs
src/ui/components/: mod.rs  secret_edit_view.rs  secret_text_view.rs
src/ui/util/: cursive_ext.rs  mod.rs
wden/: Cargo.toml
wden/src/: lib.rs  main.rs
wden/src/bitwarden/: api.rs  apikey.rs  cipher.rs  keys.rs  mod.rs  server.rs
wden/src/bitwarden/cipher/: keys.rs  mod.rs  pbkdf.rs
wden/src/profile/: data.rs  global_settings.rs  store.rs
wden/src/ui/: attachment_download.rs  autolock.rs  collections.rs  data.rs  item_details.rs  launch.rs  lock.rs  login.rs  mod.rs  new_dev_verification.rs  panic_handler.rs  search.rs  sync.rs  two_factor.rs  vault_table.rs
wden/src/ui/biometric/: linux_biometric.rs  mod.rs  windows_biometric.rs
wden/src/ui/clipboard/: linux_clipboard.rs  mod.rs  windows_clipboard.rs
wden/src/ui/components/: mod.rs  readline_edit_wrapper.rs  secret_text_view.rs
wden/src/ui/util/: cursive_ext.rs
wden/src/util/: mod.rs  secure_buffer.rs  slice_writer.rs
wden/src/util/keystore/: linux_keystore.rs  mod.rs  windows_keystore.rs
wden/tests/: integration_test.rs
wden/tests/common/: api.rs  mod.rs  testdata.rs  user_init.rs  vault_init.rs
