[package]
name = "wden"
version = "0.3.0"
authors = ["Lauri Koskela <lk@lkoskela.com>"]
edition = "2021"
default-run = "wden"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
rand = "0.8"

# Crypto crates (RustCrypto)
aes = "0.7.4"
block-modes = "0.8.1"
rsa = "0.5.0"
sha-1 = "0.9.7"
sha2 = "0.9.5"
hmac = "0.11.0"
pbkdf2 = "0.8.0"
hkdf = "0.11.0"

uuid = { version = "0.8.2", features = ["v4"] }

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.50"
tokio = { version = "1.2", features = ["full"] }
reqwest = { version = "0.11.1", features = ["json"] }
cursive = { version = "0.17", default_features = false, features = ["crossterm-backend"] }
cursive_table_view = { git = "https://github.com/luryus/cursive_table_view", version = "0.14.0-alpha.1" }
log = "0.4"
lazy_static = "1.4"
clap = { version="3.0.0", features = ["derive"] }
directories-next = "2.0.0"
thiserror = "1.0"
anyhow = "1.0"
zeroize = "1.4.1"
simsearch = "0.2"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "4.3.0", features = ["std"] }

[target.'cfg(target_os="linux")'.dependencies]
x11-clipboard = { git = "https://github.com/luryus/x11-clipboard", tag = "v0.5.3+multitarget.1", version = "0.5.3" }
