[package]
name = "cursive_secret_edit_view"
edition = "2021"
version = "0.1.0"

[dependencies]
cursive_core = { version = "0.4" }
zeroize = { version = "1.7" }
arrayvec = { version = "0.7", features = [ "zeroize" ] }
unicode-segmentation = "1.10.1"

[dev-dependencies]
cursive = { version = "0.21" }
