[package]
name = "wden"
version = "0.7.1"
authors = ["Lauri Koskela <lk@lkoskela.com>"]
edition = "2021"
default-run = "wden"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
rand = "0.8"

# Crypto crates (RustCrypto)
aes = { version = "0.8", features = ["zeroize"] }
cbc = { version = "0.1", features = ["zeroize", "alloc"] }
rsa = "0.9"
sha-1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
argon2 = { version = "0.5", features = ["zeroize"] }

uuid = { version = "1.3", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.30", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
cursive = { version = "0.20", default_features = false, features = ["crossterm-backend"] }
cursive_table_view = { git = "https://github.com/luryus/cursive_table_view", version = "0.14.0-alpha.1" }
cursive_secret_edit_view = { path = "../cursive_secret_edit_view" }
log = "0.4"
lazy_static = "1.4"
clap = { version="4", features = ["derive"] }
directories-next = "2.0"
thiserror = "1.0"
anyhow = "1.0"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
arrayvec = "0.7"
simsearch = "0.2"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "4.4", features = ["std"] }

[target.'cfg(target_os="linux")'.dependencies]
x11-clipboard = { git = "https://github.com/luryus/x11-clipboard", tag = "v0.7.1+multitarget.1", version = "0.7.1" }
x11rb = "0.12"
