[package]
name = "wden"
version = "0.13.3"
authors = ["Lauri Koskela <lk@lkoskela.com>"]
edition = "2024"
default-run = "wden"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
puppet-integration-tests = []

[dependencies]
base64 = "0.22"
rand = "0.8"

# Crypto crates (RustCrypto)
aes = { version = "0.8", features = ["zeroize"] }
cbc = { version = "0.1", features = ["zeroize", "alloc"] }
rsa = "0.9"
sha-1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
argon2 = { version = "0.5", features = ["zeroize"] }

uuid = { version = "1.6", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
cursive = "0.21"
cursive_table_view = { git = "https://github.com/luryus/cursive_table_view", version = "0.15.0", tag = "v0.15.0+disablesort.1" }
cursive_secret_edit_view = { path = "../cursive_secret_edit_view" }
log = "0.4"
lazy_static = "1.4"
clap = { version="4", features = ["derive"] }
directories-next = "2.0"
thiserror = "2.0"
anyhow = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
arrayvec = "0.7"
simsearch = "0.2"
tabled = "0.19"
maybe-owned = "0.3.4"
indicatif = "0.17.9"
console = "0.15.11"
rpassword = "7.3.1"
rayon = "1.10.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4", features = ["std"] }

[target.'cfg(target_os="linux")'.dependencies]
x11-clipboard = { git = "https://github.com/luryus/x11-clipboard", tag = "v0.9.1+multitarget.1", version = "0.9.1" }
x11rb = "0.13"
# Use native_lib because the rust implementation currently does not work with KDE
wl-clipboard-rs = { version = "0.9", features = ["native_lib"] }

[dev-dependencies]
testcontainers = "0.23.1"
tokio-test-shutdown-timeout = "0.0.2"
